php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #29839 incorrect convert (xml:lang to lang)
Submitted: 2004-08-25 17:37 UTC Modified: 2004-08-26 20:44 UTC
From: mobi at delfnet dot pl Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5CVS-2004-08-25 (dev) OS: windows 2000 SP4
Private report: No CVE-ID: None
 [2004-08-25 17:37 UTC] mobi at delfnet dot pl
Description:
------------
I used wsdl file to create w soap server (http://www.oasis-open.org/committees/wsrp/specifications/version1/wsrp_service.wsdl). I have noticed the soap response convert xml:lang type to lang type.
Wsdl (import http://www.oasis-open.org/committees/wsrp/specifications/version1/wsrp_v1_types.xsd):

(...)
<attribute ref="xml:lang" use="required"/>
(...)

Soap response:
(...)
<ns1:description lang="en"><ns1:value>exampledescription</ns1:value></ns1:description>
(...)

Should be:
<description xml:lang="en"><value>exampledescription</value></description>

The namespace ns1 is ok but lang has wrong type.



 


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-08-26 20:44 UTC] dmitry@php.net
Fixed in CVS (HEAD & PHP_5_0)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC