Fixed bug #29839 (incorrect convert (xml:lang to lang))