ext/soap/php_encoding.c
@@ -17,7 +17,7 @@
   |          Dmitry Stogov <dmitry@zend.com>                             |
   +----------------------------------------------------------------------+
 */
-/* $Id: php_encoding.c,v 1.73 2004/08/26 15:26:32 dmitry Exp $ */
+/* $Id: php_encoding.c,v 1.74 2004/08/26 18:40:10 dmitry Exp $ */
 
 #include <time.h>
 
@@ -1357,7 +1357,14 @@ static xmlNodePtr to_xml_object(encodeTypePtr type, zval *data, int style, xmlNo
 								if ((*attr)->fixed && strcmp((*attr)->fixed,dummy->children->content) != 0) {
 									soap_error3(E_ERROR, "Encoding: Attribute '%s' has fixed value '%s' (value '%s' is not allowed)", (*attr)->name, (*attr)->fixed, dummy->children->content);
 								}
-								xmlSetProp(xmlParam, (*attr)->name, dummy->children->content);
+								if ((*attr)->namens && 
+								    (type->ns == NULL || strcmp((*attr)->namens, type->ns))) {
+									xmlNsPtr nsp = encode_add_ns(xmlParam, (*attr)->namens);
+
+									xmlSetNsProp(xmlParam, nsp, (*attr)->name, dummy->children->content);
+								} else {
+									xmlSetProp(xmlParam, (*attr)->name, dummy->children->content);
+								}
 							}
 							xmlUnlinkNode(dummy);
 							xmlFreeNode(dummy);
